got keys sorted out

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.min.js" integrity="sha384-5h4UG+6GOuV9qXh6HqOLwZMY4mnLPraeTrjT5v07o347pj6IkfuoASuGBhfDsp3d" crossorigin="anonymous"></script>
     <title>Document</title>
+    <script src="./keys.js"></script>
+    <script src="./script.js"></script>
 </head>
 <body>
 
@@ -13,8 +15,57 @@
         <div class="row" id="title-box">
         <h1>Song Jam Inspiration Engine</h1>
         </div>
-
-        <div class="row" id="key-row"></div>
+        <div class="row" id="explanation"></div>
+        <div class="row" id="item">
+            <div class="col col-6">
+                <p>Genre</p>
+                <button onclick="readout()">test</button>
+            </div>
+            <div class="col col-6">
+                <p>randomized result</p>
+            </div>
+        </div>
+        <div class="row" id="item">
+            <div class="col col-6">
+                <p>Key</p>
+            </div>
+            <div class="col col-6">
+                <p>randomized result</p>
+            </div>
+        </div>
+        <div class="row" id="item">
+            <div class="col col-6">
+                <p>Tempo and Time signature</p>
+            </div>
+            <div class="col col-6">
+                <p>randomized result</p>
+            </div>
+        </div>
+        <div class="row" id="item">
+            <div class="col col-6">
+                <p>Randomly selected instrument</p>
+            </div>
+            <div class="col col-6">
+                <p>randomized result</p>
+            </div>
+        </div>
+        <div class="row" id="item">
+            <div class="col col-6">
+                <p>explanation of randomized feature</p>
+            </div>
+            <div class="col col-6">
+                <p>randomized result</p>
+            </div>
+        </div>
+        <div class="row" id="item">
+            <div class="col col-6">
+                <p>explanation of randomized feature</p>
+            </div>
+            <div class="col col-6">
+                <p>randomized result</p>
+            </div>
+        </div>
+        
 
 
 
