got the key selector working

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,18 +19,19 @@
         <div class="row" id="item">
             <div class="col col-6">
                 <p>Genre</p>
-                <button onclick="readout()">test</button>
+                <button onclick="selectRandomKey()">test</button>
             </div>
             <div class="col col-6">
                 <p>randomized result</p>
             </div>
         </div>
-        <div class="row" id="item">
+        <div class="row" id="item key-row">
             <div class="col col-6">
                 <p>Key</p>
             </div>
-            <div class="col col-6">
+            <div class="col col-6" id="key-image"> 
                 <p>randomized result</p>
+                <img src="" alt="">
             </div>
         </div>
         <div class="row" id="item">
