--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
             </div>
 
         </div>
+        <div class="row">
+            <div class="col-12">
+                <h2><a href="http://theselyricsdonotexist.com/">Lyrics Generator</a></h2>
+                <h2><a href="https://rhymer.com/">Rhyming Dictionary</a></h2>
+            </div>
+        </div>
         
 
 
